<resources>
    <string name="app_name">GrizzlyProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sort">Sort</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_clear">Clear</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_student">Add Student </string>
    <string name="menu_settings"> Settings </string>
    <string name="menu_ocr"> OCR </string>
    <string name="menu_about"> About </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment" />
    <string name="hello_add_user_fragment" />
    <string name="hello_settings_fragment" />
    <string name="hello_ocr_fragment" />
    <string name="hello_about_fragment" />
</resources>